# robotix_project

./: .gitignore  README.md  pyproject.toml
congfigs/: lexicon.yaml  model.yaml  singularity.yaml  type.yaml
congfigs/model/: model.yaml
congfigs/physix/: dimension_units.yaml
data/art/: music.yaml
data/career/: career.yaml
data/health/food/: tea.yaml  vitamins.yaml
data/health/sleep/: sleep.yaml
data/health/sport/: boot.yaml  cycling.yaml  running.yaml  sport.yaml
data/health/tooth/: doctors.yaml
data/health/weight/: weight.yaml
data/locations/austria/: austria.yaml
data/problem_solving/: problem_solving.yaml
data/tools/: bottle.yaml  cloths.yaml
data/tools/camera/: camera.yaml
data/tools/keyboard/: keyboard.yaml
data/tools/printer/: printer.yaml
data/tools/sport/: bicycle.yaml
multi-robot/experiments/: gps_spiral_torsion_plain.py  noisy_gps_helic_preprocessing.py
src/robotix/: State.py  cli.py  robot.py
src/robotix/act/: CollectionGenerator.py  action.py  action_collection.py  action_sequence.py  action_set.py
src/robotix/action/: action.py  action_sequence.py  action_set.py
src/robotix/actuator/: actuator.py  actuator_set.py
src/robotix/body/: body.py
src/robotix/cmd/: cmd.py  cmd_seq.py
src/robotix/environment/: environment.py  occupancy_grid_map.py
src/robotix/estimation/: estimator.py
src/robotix/experiment/: cli.py  experiment.py  scenario.py
src/robotix/factory/: factory.py  from_directory.py
src/robotix/goal/: Goal.py  basic.py  goal.py  interface.py  robot_goal.py  robot_goals.py  (+1 more)
tests/: test_robot.py
(+1063 files in other folders)
