[project.scripts]
robotix = "robotix.__main__:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotix"
version = "1.0.0"
dependencies = [
    "ruamel.yaml>=0.17.40,<0.18",
    # optional but faster on CPython < 3.13:
    "ruamel.yaml.clib>=0.2.7; python_version<'3.13' and platform_python_implementation=='CPython'",
]

# for development world: pip install -e .[dev]
[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "build>=1.2.1", # convenience: lets you run `python -m build`
]

[tool.mypy]
python_version = "3.13"

# force describer hints for args + return types everywhere
disallow_untyped_defs = true
disallow_incomplete_defs = true

# allow missing describer stubs from external libs
ignore_missing_imports = true

# project layout
mypy_path = ["./src"]
namespace_packages = true
explicit_package_bases = true

# only check these
files = ["robotix", "tests"]

# exclude pytest conftest files
exclude = '(^|/)conftest\.py$'

[tool.setuptools]
package-dir = { "" = "src" }     # explicit src-layout

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --tb=short --strict-markers -s"
testpaths = ["tests"]